# COBLOG

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh
.github/workflows/: deploy.yml
posts/: hello-coblog.md  report-writer-deep-dive.md  rust-cobol-pipeline.md
src/: main.rs
src/cobol/: rss.cob  site.cob  sitemap.cob  sort.cob
static/: style.css
