[package]
name = "mdprep"
version = "0.1.0"
edition = "2021"
description = "Markdown to fixed-width COBOL record preprocessor for COBLOG"

[[bin]]
name = "mdprep"
path = "src/main.rs"

[dependencies]
pulldown-cmark = "0.10"
gray_matter = "0.2"
walkdir = "2"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
